- fix spinalLog check if websocket logs (spinalLog) is defined
