# src/swagger/swagger.json
@@ -6922,6 +6922,60 @@
 				]
 			}
 		},
+		"/api/v1/pam/websocket/{buildingId}/get_client_connected_count": {
+			"get": {
+				"operationId": "GetNbClientConnected",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"numberOfClientConnected": {}
+											},
+											"required": [
+												"numberOfClientConnected"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"message": {}
+											},
+											"required": [
+												"message"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Websocket Logs"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "buildingId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/api/v1/pam/websocket_log/{buildingId}/read/{begin}/{end}": {
 			"get": {
 				"operationId": "ReadWebsocketLogs",
